Add TTL and Expiry handlers for Redis and implement eviction logic
Introduced `ExpireMessage`, `ExpireAtMessage`, `PExpireMessage`, `PExpireAtMessage`, `TTLMessage`, and `PTTLMessage` for handling Redis TTL and expiry commands. Added eviction logic to `BaseStringHandler` to remove expired keys dynamically. Included unit tests for expiry functionality, ensuring correctness and compliance with Redis behavior.